<?xml version="1.0" encoding="utf-8"?>
<layout>
    <!--    The usage of LinearLayout in this layout is justified because it is used to vertically stack the views (TextView and Button) in the center of the screen. The gravity attribute is used to center the views horizontally and vertically.-->


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".screens.WelcomeFragment">


        <TextView
            android:id="@+id/app_title_text"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/welcome_text"
            style="@style/ShoeNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/welcome_text_desc" />

        <Button
            android:id="@+id/instructions_button"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_screen" />
    </LinearLayout>
</layout>